@@ -37,6 +37,7 @@ BUG FIXES:
 preferences dialog after closing the last main window.
 +Fix regression in html autocomp where cursor position would be incorrectly
 placed after the inserted tag.
++Fix Launch not updating after a Save As on Linux.
 
 #-----------------------------------------------------------------------------#
 Changes since last release:
